--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "@testing-library/user-event": "^13.5.0",
     "apexcharts": "^3.35.3",
     "bootstrap": "^5.1.3",
+    "bootstrap-datepicker": "^1.9.0",
     "chart.js": "^2.8.0",
     "jquery": "^3.6.0",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-bootstrap": "^2.4.0",
     "react-chartjs-2": "^2.11.2",
+    "react-datepicker": "^4.8.0",
     "react-dnd": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-editor-js": "^2.1.0",
@@ -25,6 +27,7 @@
     "react-rte": "^0.16.5",
     "react-scripts": "5.0.1",
     "react-select": "^5.4.0",
+    "react-switch": "^7.0.0",
     "recharts": "^2.1.10",
     "sass": "^1.53.0",
     "slate-editor": "^5.1.1",
