--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "react-apexcharts": "^1.4.0",
     "react-bootstrap": "^2.4.0",
     "react-chartjs-2": "^2.11.2",
+    "react-css-devices": "^0.1.7",
     "react-datepicker": "^4.8.0",
+    "react-device-emulator": "^1.1.0",
     "react-dnd": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-editor-js": "^2.1.0",
@@ -28,6 +30,7 @@
     "react-scripts": "5.0.1",
     "react-select": "^5.4.0",
     "react-switch": "^7.0.0",
+    "react-tabs": "^5.1.0",
     "recharts": "^2.1.10",
     "sass": "^1.53.0",
     "slate-editor": "^5.1.1",
