--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@tinymce/tinymce-react": "^4.2.0",
     "apexcharts": "^3.35.3",
     "bootstrap": "^5.1.3",
     "bootstrap-datepicker": "^1.9.0",
@@ -18,12 +19,14 @@
     "react-css-devices": "^0.1.7",
     "react-datepicker": "^4.8.0",
     "react-device-emulator": "^1.1.0",
+    "react-device-frame": "^2.1.4",
     "react-dnd": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-editor-js": "^2.1.0",
     "react-formio": "^4.3.0",
     "react-icon": "^1.0.0",
     "react-icons": "^4.4.0",
+    "react-minimal-pie-chart": "^8.3.0",
     "react-quill": "^1.3.5",
     "react-router-dom": "^6.3.0",
     "react-rte": "^0.16.5",
