--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-icons": "^4.4.0",
     "react-minimal-pie-chart": "^8.3.0",
     "react-quill": "^1.3.5",
+    "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-rte": "^0.16.5",
     "react-scripts": "5.0.1",
@@ -35,6 +36,8 @@
     "react-switch": "^7.0.0",
     "react-tabs": "^5.1.0",
     "recharts": "^2.1.10",
+    "redux": "^4.2.0",
+    "redux-thunk": "^2.4.1",
     "sass": "^1.53.0",
     "slate-editor": "^5.1.1",
     "styled-components": "^5.3.5",
