--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-icon": "^1.0.0",
     "react-icons": "^4.4.0",
     "react-minimal-pie-chart": "^8.3.0",
+    "react-pay-icons": "^3.0.0",
     "react-quill": "^1.3.5",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
