--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "apexcharts": "^3.35.3",
     "bootstrap": "^5.1.3",
     "bootstrap-datepicker": "^1.9.0",
+    "cb-react-forms": "^1.1.0",
     "chart.js": "^2.8.0",
     "jquery": "^3.6.0",
     "react": "^18.2.0",
@@ -24,6 +25,7 @@
     "react-dom": "^18.2.0",
     "react-editor-js": "^2.1.0",
     "react-formio": "^4.3.0",
+    "react-hook-form": "^7.37.0",
     "react-icon": "^1.0.0",
     "react-icons": "^4.4.0",
     "react-minimal-pie-chart": "^8.3.0",
