--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "cb-react-forms": "^1.1.0",
     "chart.js": "^2.8.0",
     "jquery": "^3.6.0",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-bootstrap": "^2.4.0",
     "react-chartjs-2": "^2.11.2",
     "react-css-devices": "^0.1.7",
     "react-datepicker": "^4.8.0",
+    "react-datetime": "^3.2.0",
     "react-device-emulator": "^1.1.0",
     "react-device-frame": "^2.1.4",
     "react-dnd": "^16.0.1",
